--- a/index.html
+++ b/index.html
@@ -22,5 +22,55 @@
 
     -->
     <script src="js/index.js"></script>
+    
+<link rel="stylesheet" href="styles.css">
+
+<nav id="navbar">
+<header>JS Documentation</header>
+<a class="nav-link" href="Introduction">Introduction</a>
+<a class="nav-link" href="Coding">Coding</a>
+<a class="nav-link" href="JavaScript">JavaScript</a>
+<a class="nav-link" href="Hello">Hello</a>
+<a class="nav-link" href="Variables">Variables</a>
+</nav>
+
+<main id="main-doc">
+<section class="main-section" id="Introduction">
+  <header>Introduction</header>
+  <p></p>
+  <p></p>
+  <code></code>
+   <code></code>
+   <li>General Understanding</li>
+   <li>Good work</li>
+   <li>Perseverance</li>
+</section>
+<section class="main-section" id="Coding">
+   <header>Coding</header>
+   <p></p>
+   <p></p>
+    <code></code>
+    <li>html</li>
+    <li>css</li>
+</section>
+<section class="main-section" id="JavaScript">
+   <header>JavaScript</header>
+   <p></p>
+   <p></p>
+    <code></code>
+</section>
+<section class="main-section" id="Hello">
+   <header>Hello</header>
+   <p></p>
+   <p></p>
+    <code></code>
+</section>
+<section class="main-section" id="Variables">
+   <header>Variables</header>
+   <p></p>
+   <p></p>
+    <code></code>
+</section>
+</main>
   </body>
 </html>
